@@ -58,6 +58,18 @@ displays all of the entries in
 rather than just the ones with the
 .I user
 option.
+
+Invoking
+.B userformat
+.I device
+allows formatting \fIdevice\fR,
+as if by selecting
+.I device
+in the
+.B userformat
+window, and by clicking the
+.I Format
+button.
 .SH OPTIONS
 This program has no command line options of it's own, but it does take
 the standard X program options like
